Unit Test changes

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -18,7 +18,10 @@ jobs:
                   node-version: '16'
 
             - name: Install dependencies
-              run: npm install --production
+              run: npm install
+
+            - name: Run tests
+              run: npm run test:headless
 
             - name: Build
               run: npm run build:prod
