--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -6,7 +6,7 @@ on:
             - main
 
 jobs:
-    deploy:
+    build:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -21,12 +21,17 @@ jobs:
               run: npm install
 
             - name: Build
-              run: npm run build:prod
+              run:
+                  npm run build:prod
 
-            - name: Deploy
-              if: success()
-              uses: peaceiris/actions-gh-pages@v3
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: dist/angular-github-actions
-                  enable_jekyll: true
+                  # Deployment job
+    deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
