--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -21,17 +21,10 @@ jobs:
               run: npm install
 
             - name: Build
-              run:
-                  npm run build:prod
-
-                  # Deployment job
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: build
-        steps:
+              run: npm run build:prod
+              
             - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+                id: deployment
+                uses:
+                    actions/deploy-pages@v4
+                  
