--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -22,9 +22,6 @@ jobs:
 
             - name: Build
               run: npm run build:prod
-              
+
             - name: Deploy to GitHub Pages
-                id: deployment
-                uses:
-                    actions/deploy-pages@v4
-                  
+              uses: actions/deploy-pages@v4
