--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -45,7 +45,7 @@ jobs:
             - name: Build with Jekyll
               uses: actions/jekyll-build-pages@v1
               with:
-                  source: ./dist
+                  source: ./dist/redirect/browser
                   destination: ./_site
 
             - name: Upload artifact
